tests/ui/transmutability/references/u8-to-unit.stderr
error[E0277]: `Unit` cannot be safely transmuted into `u8` in the defining scope of `assert::Context`
  --> $DIR/u8-to-unit.rs:23:50
   |
LL |     assert::is_maybe_transmutable::<&'static u8, &'static Unit>();
   |                                                  ^^^^^^^^^^^^^ The size of `Unit` is smaller than the size of `u8`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/u8-to-unit.rs:10:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
